--- a/cust/src/App.css
+++ b/cust/src/App.css
@@ -16,7 +16,7 @@ body{
   box-shadow: rgba(0,0,0, .5 ) 0 6px 24px rgba(0,0,0, .08) 0 0 0 1px;
   border-radius: 10px;
   padding: 10px;
-  width: 500px;
+  width: 400px;
   margin-top: 60px;
 
 }
@@ -26,6 +26,26 @@ header{
   justify-content: space-between;
   border-bottom: rgba(0,0,0, .05) 1px solid;
 }
+
+nav{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+ul{
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+
+}
+ul li{
+  margin-left: 15px;
+}
+
+.logo, .link{
+  text-decoration: none;
+}
+
 .header-action{
   display: flex;
   align-items: center;
